--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/static/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://www.pngfind.com/pngs/m/69-699386_download-svg-download-png-revolving-hearts-emoji-png.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Gugma ayha skwela app</title>
   </head>
   <body>
     <div id="root"></div>
